--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div id="mapContainer">
       <div id="sidebar">
         <div class="info-box">
-          <h3>NYC Gun Deaths since 2013</h3>
-          <span id="address">colored in</span><br/>
+          <h3>NY State Gun Deaths since 2013</h3>
+          <span id="address">More towards red incidates more gun deaths, more towards white indicates less</span><br/>
 
       </div>
     </div>
