--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
   </head>
 
   <body>
-    <div id="mapContainer">
-      <div id="sidebar">
-        <div class="info-box">
-          <h3>NY State Gun Deaths since 2013</h3>
-          <span id="address">More towards red incidates more gun deaths, more towards white indicates less</span><br/>
+    <div id="mapContainer"></div>
 
-      </div>
-    </div>
+      <div id='legend' class='legend' style='display: none;'>
+    <h4>Gun Deaths Total Since 2013</h4>
+    <div><span style='background-color: #f7cdcd'></span>0</div>
+    <div><span style='background-color: #ee9f9f'></span>5</div>
+    <div><span style='background-color: #ea8888'></span>10</div>
+    <div><span style='background-color: #e15e5e'></span>20</div>
+    <div><span style='background-color: #dd4a4a'></span>30</div>
+    <div><span style='background-color: #cc0000'></span>50</div>
+
+</div>
+
 
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
     <script
