--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="mapContainer"></div>
 
-      <div id='legend' class='legend' style='display: none;'>
+      <div id='legend' class='legend' style='display: block;'>
     <h4>Gun Deaths Total Since 2013</h4>
     <div><span style='background-color: #f7cdcd'></span>0</div>
     <div><span style='background-color: #ee9f9f'></span>5</div>
