--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!doctype html>
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
 
-    <title>Class 4 Example</title>
-    <meta name="description" content="The HTML5 Herald">
-    <meta name="author" content="SitePoint">
+<head>
+  <meta charset="utf-8">
 
-    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css" rel="stylesheet" />
+  <title>Class 4 Example</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
-  </head>
+  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css" rel="stylesheet" />
 
-  <body>
-    <div id="mapContainer"></div>
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+</head>
 
-      <div id='legend' class='legend' style='display: block;'>
+<body>
+  <div id="mapContainer"></div>
+
+  <div id='legend' class='legend' style='display: block;'>
     <h4>Gun Deaths Total Since 2013</h4>
     <div><span style='background-color: #f7cdcd'></span>0</div>
     <div><span style='background-color: #ee9f9f'></span>5</div>
@@ -25,14 +26,12 @@
     <div><span style='background-color: #dd4a4a'></span>30</div>
     <div><span style='background-color: #cc0000'></span>50</div>
 
-</div>
+  </div>
 
 
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
-  </body>
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
+</body>
+
 </html>
