--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Class 4 Example</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title>Gun Deaths NY State</title>
+  <meta name="description" content="A Map of Gun Deaths in NY State Since 2013">
+  <meta name="author" content="Marium Sultan">
 
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css" rel="stylesheet" />
 
