--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 
   </div>
 
+<div id="info-box">
+Hover over a ZipCode to see the amount of gun deaths
 
+</div>
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
