--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div id="mapContainer"></div>
 
-  <div id="info-box">
+  <div id="info-box"  class='info' style='display: block;'>
   Hover over a ZipCode to see the amount of gun deaths
 
   </div>
