--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="mapContainer"></div>
 
   <div id="info-box"  class='info' style='display: block;'>
-  Hover over a ZipCode to see the amount of gun deaths
+  Click a ZipCode to see the amount of gun deaths
 
   </div>
 
